--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">Hello World, MainActivity!</string>
-    <string name="app_name">AndroidJavascrit</string>
+    <string name="app_name">WebApp</string>
     <string name="action_settings">action_settings</string>
 </resources>
